2005-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/test_bus.py:
	  fix race condition because of state thread

2005-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/test_event.py:
	  fix race condition because of state thread

2005-10-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* testsuite/test_bin.py:
	  fix race condition because of state thread

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== gst-python 0.9.4 ===

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Releasing 0.9.4, "Stegosaurus"

2005-10-22  Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs:
	Cleaned-up symbols which still had the gst_ prefix
	* gst/gst.override:
	add gst_deinit to the ignore list

2005-10-20  Andy Wingo  <wingo@pobox.com>

	* gst/gstbin.override (_wrap_gst_bin_get_by_name): Dude, like
	totally don't unref NULL objects.

2005-10-19  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	* gst/gst.defs:
	Update (hopefully) final API modifications
	
	* gst/gstelement.override:
	* gst/gstpad.override:
	* gst/gstquery.override:
	Updated position querying/parsing
	Removed useless debug line
	
	* testsuite/test_element.py:
	Updated test for new API

2005-10-19  Edward Hervey  <edward@fluendo.com>

	* gst/gstmessage.override:
	Added wrappers for parsing CLOCK_PROVIDE, CLOCK_LOST, NEW_CLOCK and
	DURATION messages
	Fixed a few Tuple constructors
	Last commit from me unless huge breakage, got better things to do now
	(and it doesn't involve 'my little pony' comics) !

2005-10-19  Edward Hervey  <edward@fluendo.com>

	* gst/gst.defs:
	* gst/gst-types.defs:
	Updated API
	
	* gst/gstelement.override:
	_wrap_gst_element_get_state: made wrapper behave more like codegen-ed
	functions. 
	It now only takes an int or long as optional timeout argument, and if
	there's no argument it will use GST_CLOCK_TIME_NONE
	