@@ -274,7 +274,6 @@ init
 #endif
     if (!pygst_value_init())
         return;
-    pygst_miniobject_init();
     gst_controller_init(NULL, NULL);
 }
 %%
